# special-topics-astrodyn

./: .gitignore  README.md  default.mplstyle  main.py  pyproject.toml  ruff.toml
advanced3bodyproblem/: __init__.py  abc_cr3body_system.py  artificial_cr3body_system.py  cr3body_system.py  lagrange_points.py  natural_cr3body_system.py
